RNN forward pass

--- a/Recurrent Neural Networks.ipynb
+++ b/Recurrent Neural Networks.ipynb
@@ -215,10 +215,179 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "RNN的前向传播过程：\n",
+    "RNN的前向传播过程，就是对RNN单元的重复。加入输入序列包含10个时间步长，那么对RNN单元复制10次即可。每个单元的输入是前一个单元隐藏层的激活值($a^{\\langle t-1 \\rangle}$)以及当前时间步长的输入数据($x^{\\langle t \\rangle}$)。而对应的输出是当前单元隐藏状态($a^{\\langle t \\rangle}$)和当前时间步长的与预测值($y^{\\langle t \\rangle}$)。\n",
     "\n",
-    "![Forward Propagation.png](img/Forward Propagation.png)\n",
+    "<img src=\"img/rnn.png\" style=\"width:800px;height:300px;\">"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# GRADED FUNCTION: rnn_forward\n",
     "\n",
+    "def rnn_forward(x, a0, parameters):\n",
+    "    \"\"\"\n",
+    "    Implement the forward propagation of the recurrent neural network described in Figure (3).\n",
+    "\n",
+    "    Arguments:\n",
+    "    x -- Input data for every time-step, of shape (n_x, m, T_x).\n",
+    "    a0 -- Initial hidden state, of shape (n_a, m)\n",
+    "    parameters -- python dictionary containing:\n",
+    "                        Waa -- Weight matrix multiplying the hidden state, numpy array of shape (n_a, n_a)\n",
+    "                        Wax -- Weight matrix multiplying the input, numpy array of shape (n_a, n_x)\n",
+    "                        Wya -- Weight matrix relating the hidden-state to the output, numpy array of shape (n_y, n_a)\n",
+    "                        ba --  Bias numpy array of shape (n_a, 1)\n",
+    "                        by -- Bias relating the hidden-state to the output, numpy array of shape (n_y, 1)\n",
+    "\n",
+    "    Returns:\n",
+    "    a -- Hidden states for every time-step, numpy array of shape (n_a, m, T_x)\n",
+    "    y_pred -- Predictions for every time-step, numpy array of shape (n_y, m, T_x)\n",
+    "    caches -- tuple of values needed for the backward pass, contains (list of caches, x)\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    # Initialize \"caches\" which will contain the list of all caches\n",
+    "    caches = []\n",
+    "    \n",
+    "    # Retrieve dimensions from shapes of x and parameters[\"Wya\"]\n",
+    "    n_x, m, T_x = x.shape\n",
+    "    n_y, n_a = parameters[\"Wya\"].shape\n",
+    "    \n",
+    "    ### START CODE HERE ###\n",
+    "    \n",
+    "    # initialize \"a\" and \"y\" with zeros (≈2 lines)\n",
+    "    a = np.zeros((n_a, m, T_x))\n",
+    "    y_pred = np.zeros((n_y, m, T_x))\n",
+    "    \n",
+    "    # Initialize a_next (≈1 line)\n",
+    "    a_next = a0\n",
+    "    \n",
+    "    # loop over all time-steps\n",
+    "    for t in range(T_x):\n",
+    "        # Update next hidden state, compute the prediction, get the cache (≈1 line)\n",
+    "        a_next, yt_pred, cache = rnn_cell_forward(x[:,:,t], a_next, parameters)\n",
+    "        # Save the value of the new \"next\" hidden state in a (≈1 line)\n",
+    "        a[:,:,t] = a_next\n",
+    "        # Save the value of the prediction in y (≈1 line)\n",
+    "        y_pred[:,:,t] = yt_pred\n",
+    "        # Append \"cache\" to \"caches\" (≈1 line)\n",
+    "        caches.append(cache)\n",
+    "        \n",
+    "    ### END CODE HERE ###\n",
+    "    \n",
+    "    # store values needed for backward propagation in cache\n",
+    "    caches = (caches, x)\n",
+    "    \n",
+    "    return a, y_pred, caches"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a[4][1] =  [-0.99999375  0.77911235 -0.99861469 -0.99833267]\n",
+      "a.shape =  (5, 10, 4)\n",
+      "y_pred[1][3] = [ 0.79560373  0.86224861  0.11118257  0.81515947]\n",
+      "y_pred.shape =  (2, 10, 4)\n",
+      "caches[1][1][3] = [-1.1425182  -0.34934272 -0.20889423  0.58662319]\n",
+      "len(caches) =  2\n"
+     ]
+    }
+   ],
+   "source": [
+    "np.random.seed(1)\n",
+    "x = np.random.randn(3,10,4)\n",
+    "a0 = np.random.randn(5,10)\n",
+    "Waa = np.random.randn(5,5)\n",
+    "Wax = np.random.randn(5,3)\n",
+    "Wya = np.random.randn(2,5)\n",
+    "ba = np.random.randn(5,1)\n",
+    "by = np.random.randn(2,1)\n",
+    "parameters = {\"Waa\": Waa, \"Wax\": Wax, \"Wya\": Wya, \"ba\": ba, \"by\": by}\n",
+    "\n",
+    "a, y_pred, caches = rnn_forward(x, a0, parameters)\n",
+    "print(\"a[4][1] = \", a[4][1])\n",
+    "print(\"a.shape = \", a.shape)\n",
+    "print(\"y_pred[1][3] =\", y_pred[1][3])\n",
+    "print(\"y_pred.shape = \", y_pred.shape)\n",
+    "print(\"caches[1][1][3] =\", caches[1][1][3])\n",
+    "print(\"len(caches) = \", len(caches))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**预期输出**:\n",
+    "\n",
+    "<table>\n",
+    "    <tr>\n",
+    "        <td>\n",
+    "            **a[4][1]**:\n",
+    "        </td>\n",
+    "        <td>\n",
+    "           [-0.99999375  0.77911235 -0.99861469 -0.99833267]\n",
+    "        </td>\n",
+    "    </tr>\n",
+    "        <tr>\n",
+    "        <td>\n",
+    "            **a.shape**:\n",
+    "        </td>\n",
+    "        <td>\n",
+    "           (5, 10, 4)\n",
+    "        </td>\n",
+    "    </tr>\n",
+    "        <tr>\n",
+    "        <td>\n",
+    "            **y[1][3]**:\n",
+    "        </td>\n",
+    "        <td>\n",
+    "           [ 0.79560373  0.86224861  0.11118257  0.81515947]\n",
+    "        </td>\n",
+    "    </tr>\n",
+    "        <tr>\n",
+    "        <td>\n",
+    "            **y.shape**:\n",
+    "        </td>\n",
+    "        <td>\n",
+    "           (2, 10, 4)\n",
+    "        </td>\n",
+    "    </tr>\n",
+    "        <tr>\n",
+    "        <td>\n",
+    "            **cache[1][1][3]**:\n",
+    "        </td>\n",
+    "        <td>\n",
+    "           [-1.1425182  -0.34934272 -0.20889423  0.58662319]\n",
+    "        </td>\n",
+    "    </tr>\n",
+    "        <tr>\n",
+    "        <td>\n",
+    "            **len(cache)**:\n",
+    "        </td>\n",
+    "        <td>\n",
+    "           2\n",
+    "        </td>\n",
+    "    </tr>\n",
+    "\n",
+    "</table>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "部分参数可以合并，从而简化计算：\n",
     "\n",
     "![Simplified RNN notation.png](img/Simplified RNN notation.png)"
@@ -290,7 +459,9 @@
    "source": [
     "## 8. 循环神经网络的梯度消失问题 Vanishing gradients with RNNs\n",
     "\n",
-    "下面列举了两个句子，根据主语的单复数（cat or cats），跟在一大段定语从句后面的be动词会需要不同（was or were）。而目前提到的RNN，处理这个**长依赖 long-range dependencies**的能力不强，究其原因，可以归结于梯度消失。RNN中每个单词，都相当于神经网络的一层。当RNN的网络非常深时，很难使得反向传播比较强地影响到最初几层。为了应对RNN的梯度消失问题，有一系列的解决方案。以GRU和LSTM为主要代表。\n",
+    "下面列举了两个句子，根据主语的单复数（cat or cats），跟在一大段定语从句后面的be动词会需要不同（was or were）。而目前提到的RNN，处理这个**长依赖 long-range dependencies**的能力不强，究其原因，可以归结于梯度消失。RNN中每个单词，都相当于神经网络的一层。当RNN的网络非常深时，很难使得反向传播比较强地影响到最初几层。所以基础的RNN结构，仅在输出 $y^{\\langle t \\rangle}$ 主要依赖于局部上下文 (即局部信息 $x^{\\langle t' \\rangle}$ ，其中 $t'$ 离 $t$ 很近) 的情况下表现良好。\n",
+    "\n",
+    "为了应对RNN的梯度消失问题，有一系列的解决方案。以GRU和LSTM为主要代表。\n",
     "\n",
     "RNN的梯度爆炸：只需要进行**梯度裁剪gradient cliping**即可，相对好解决。\n",
     "\n",
