--- a/Recurrent Neural Networks.ipynb
+++ b/Recurrent Neural Networks.ipynb
@@ -487,9 +487,260 @@
    "source": [
     "## 10. 长短期记忆单元 Long Short Term Memory\n",
     "\n",
-    "LSTM是更复杂的模型，使用也更为广泛。GRU的计算量会小一些。\n",
+    "LSTM是更复杂的模型，使用也更为广泛。GRU的计算量会小一些。LSTM单元结构如下：\n",
     "\n",
-    "![LSTM in pictures.png](img/LSTM in pictures.png)"
+    "<img src=\"img/LSTM.png\" style=\"width:500;height:400px;\">\n",
+    "<caption><center> **Figure 4**: LSTM-cell. This tracks and updates a \"cell state\" or memory variable $c^{\\langle t \\rangle}$ at every time-step, which can be different from $a^{\\langle t \\rangle}$. </center></caption>\n",
+    "\n",
+    "#### - 遗忘门 Forget gate\n",
+    "\n",
+    "假设我们在阅读文章，希望用LSTM来记录语法结构，比如记录下主语是单数还是复数。如果主语从单数变成了复数，我们需要有某种机制可以忘记之前保存的关于单复数状态的记忆值。LSTM中的遗忘门用于达成这个目的：\n",
+    "\n",
+    "$$\\Gamma_f^{\\langle t \\rangle} = \\sigma(W_f[a^{\\langle t-1 \\rangle}, x^{\\langle t \\rangle}] + b_f)\\tag{1} $$\n",
+    "\n",
+    "这里，权重 $W_f$ 控制遗忘门的行为。我们将 $[a^{\\langle t-1 \\rangle} 和 x^{\\langle t \\rangle}]$ 合并，用 $W_f$ 来乘。这个等式的结果是一个值在0和1之间的向量 $\\Gamma_f^{\\langle t \\rangle}$。而遗忘门向量最终会和之前单元的状态变量 $c^{\\langle t-1 \\rangle}$ 进行元素级别的相乘。所以如果 $\\Gamma_f^{\\langle t \\rangle}$ 的值是0（或者接近0），LSTM就会在对应的 $c^{\\langle t-1 \\rangle}$ 中移除相关的信息（比如：之前是单数的主语）。而如果值是1，则会继续保留信息。\n",
+    "\n",
+    "#### - 更新门 Update gate\n",
+    "\n",
+    "一旦我们遗忘了主语是单数，接下来就需要一种机制来反应新的主语是复数。下面是更新门的公式：\n",
+    "\n",
+    "$$\\Gamma_u^{\\langle t \\rangle} = \\sigma(W_u[a^{\\langle t-1 \\rangle}, x^{\\{t\\}}] + b_u)\\tag{2} $$ \n",
+    "\n",
+    "和遗忘门类似，这里 $\\Gamma_u^{\\langle t \\rangle}$ 也是一个值在0到1之间的向量。它会和 $\\tilde{c}^{\\langle t \\rangle}$ 进行元素级别的相乘来计算 $c^{\\langle t \\rangle}$。\n",
+    "\n",
+    "#### - 更新单元 Updating the cell \n",
+    "\n",
+    "要更新主语，我们需要创建一个新的向量，使其可以和之前的单元状态变量相加，这里的公式为：\n",
+    "\n",
+    "$$ \\tilde{c}^{\\langle t \\rangle} = \\tanh(W_c[a^{\\langle t-1 \\rangle}, x^{\\langle t \\rangle}] + b_c)\\tag{3} $$\n",
+    "\n",
+    "最终，新的单元状态变量为：\n",
+    "\n",
+    "$$ c^{\\langle t \\rangle} = \\Gamma_f^{\\langle t \\rangle}* c^{\\langle t-1 \\rangle} + \\Gamma_u^{\\langle t \\rangle} *\\tilde{c}^{\\langle t \\rangle} \\tag{4} $$\n",
+    "\n",
+    "\n",
+    "#### - 输出门 Output gate\n",
+    "\n",
+    "公式如下：\n",
+    "\n",
+    "$$ \\Gamma_o^{\\langle t \\rangle}=  \\sigma(W_o[a^{\\langle t-1 \\rangle}, x^{\\langle t \\rangle}] + b_o)\\tag{5}$$ \n",
+    "$$ a^{\\langle t \\rangle} = \\Gamma_o^{\\langle t \\rangle}* \\tanh(c^{\\langle t \\rangle})\\tag{6} $$\n",
+    "\n",
+    "在公式5中，我们会使用sigmoid函数。而在公式6中，对之前的状态使用tanh函数。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# GRADED FUNCTION: lstm_cell_forward\n",
+    "\n",
+    "def lstm_cell_forward(xt, a_prev, c_prev, parameters):\n",
+    "    \"\"\"\n",
+    "    Implement a single forward step of the LSTM-cell as described in Figure (4)\n",
+    "\n",
+    "    Arguments:\n",
+    "    xt -- your input data at timestep \"t\", numpy array of shape (n_x, m).\n",
+    "    a_prev -- Hidden state at timestep \"t-1\", numpy array of shape (n_a, m)\n",
+    "    c_prev -- Memory state at timestep \"t-1\", numpy array of shape (n_a, m)\n",
+    "    parameters -- python dictionary containing:\n",
+    "                        Wf -- Weight matrix of the forget gate, numpy array of shape (n_a, n_a + n_x)\n",
+    "                        bf -- Bias of the forget gate, numpy array of shape (n_a, 1)\n",
+    "                        Wi -- Weight matrix of the update gate, numpy array of shape (n_a, n_a + n_x)\n",
+    "                        bi -- Bias of the update gate, numpy array of shape (n_a, 1)\n",
+    "                        Wc -- Weight matrix of the first \"tanh\", numpy array of shape (n_a, n_a + n_x)\n",
+    "                        bc --  Bias of the first \"tanh\", numpy array of shape (n_a, 1)\n",
+    "                        Wo -- Weight matrix of the output gate, numpy array of shape (n_a, n_a + n_x)\n",
+    "                        bo --  Bias of the output gate, numpy array of shape (n_a, 1)\n",
+    "                        Wy -- Weight matrix relating the hidden-state to the output, numpy array of shape (n_y, n_a)\n",
+    "                        by -- Bias relating the hidden-state to the output, numpy array of shape (n_y, 1)\n",
+    "                        \n",
+    "    Returns:\n",
+    "    a_next -- next hidden state, of shape (n_a, m)\n",
+    "    c_next -- next memory state, of shape (n_a, m)\n",
+    "    yt_pred -- prediction at timestep \"t\", numpy array of shape (n_y, m)\n",
+    "    cache -- tuple of values needed for the backward pass, contains (a_next, c_next, a_prev, c_prev, xt, parameters)\n",
+    "    \n",
+    "    Note: ft/it/ot stand for the forget/update/output gates, cct stands for the candidate value (c tilde),\n",
+    "          c stands for the memory value\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # Retrieve parameters from \"parameters\"\n",
+    "    Wf = parameters[\"Wf\"]\n",
+    "    bf = parameters[\"bf\"]\n",
+    "    Wi = parameters[\"Wi\"]\n",
+    "    bi = parameters[\"bi\"]\n",
+    "    Wc = parameters[\"Wc\"]\n",
+    "    bc = parameters[\"bc\"]\n",
+    "    Wo = parameters[\"Wo\"]\n",
+    "    bo = parameters[\"bo\"]\n",
+    "    Wy = parameters[\"Wy\"]\n",
+    "    by = parameters[\"by\"]\n",
+    "    \n",
+    "    # Retrieve dimensions from shapes of xt and Wy\n",
+    "    n_x, m = xt.shape\n",
+    "    n_y, n_a = Wy.shape\n",
+    "\n",
+    "    ### START CODE HERE ###\n",
+    "    # Concatenate a_prev and xt (≈3 lines)\n",
+    "    concat = np.zeros((n_a + n_x, m))\n",
+    "    concat[: n_a, :] = a_prev\n",
+    "    concat[n_a :, :] = xt\n",
+    "\n",
+    "    # Compute values for ft, it, cct, c_next, ot, a_next using the formulas given figure (4) (≈6 lines)\n",
+    "    ft = sigmoid(Wf.dot(concat) + bf)\n",
+    "    it = sigmoid(Wi.dot(concat) + bi)\n",
+    "    cct = np.tanh(Wc.dot(concat) + bc)\n",
+    "    c_next = it * cct + ft * c_prev\n",
+    "    ot = sigmoid(Wo.dot(concat) + bo)\n",
+    "    a_next = ot * np.tanh(c_next)\n",
+    "    \n",
+    "    # Compute prediction of the LSTM cell (≈1 line)\n",
+    "    yt_pred = softmax(Wy.dot(a_next) + by)\n",
+    "    ### END CODE HERE ###\n",
+    "\n",
+    "    # store values needed for backward propagation in cache\n",
+    "    cache = (a_next, c_next, a_prev, c_prev, ft, it, cct, ot, xt, parameters)\n",
+    "\n",
+    "    return a_next, c_next, yt_pred, cache"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a_next[4] =  [-0.66408471  0.0036921   0.02088357  0.22834167 -0.85575339  0.00138482\n",
+      "  0.76566531  0.34631421 -0.00215674  0.43827275]\n",
+      "a_next.shape =  (5, 10)\n",
+      "c_next[2] =  [ 0.63267805  1.00570849  0.35504474  0.20690913 -1.64566718  0.11832942\n",
+      "  0.76449811 -0.0981561  -0.74348425 -0.26810932]\n",
+      "c_next.shape =  (5, 10)\n",
+      "yt[1] = [ 0.79913913  0.15986619  0.22412122  0.15606108  0.97057211  0.31146381\n",
+      "  0.00943007  0.12666353  0.39380172  0.07828381]\n",
+      "yt.shape =  (2, 10)\n",
+      "cache[1][3] = [-0.16263996  1.03729328  0.72938082 -0.54101719  0.02752074 -0.30821874\n",
+      "  0.07651101 -1.03752894  1.41219977 -0.37647422]\n",
+      "len(cache) =  10\n"
+     ]
+    }
+   ],
+   "source": [
+    "np.random.seed(1)\n",
+    "xt = np.random.randn(3,10)\n",
+    "a_prev = np.random.randn(5,10)\n",
+    "c_prev = np.random.randn(5,10)\n",
+    "Wf = np.random.randn(5, 5+3)\n",
+    "bf = np.random.randn(5,1)\n",
+    "Wi = np.random.randn(5, 5+3)\n",
+    "bi = np.random.randn(5,1)\n",
+    "Wo = np.random.randn(5, 5+3)\n",
+    "bo = np.random.randn(5,1)\n",
+    "Wc = np.random.randn(5, 5+3)\n",
+    "bc = np.random.randn(5,1)\n",
+    "Wy = np.random.randn(2,5)\n",
+    "by = np.random.randn(2,1)\n",
+    "\n",
+    "parameters = {\"Wf\": Wf, \"Wi\": Wi, \"Wo\": Wo, \"Wc\": Wc, \"Wy\": Wy, \"bf\": bf, \"bi\": bi, \"bo\": bo, \"bc\": bc, \"by\": by}\n",
+    "\n",
+    "a_next, c_next, yt, cache = lstm_cell_forward(xt, a_prev, c_prev, parameters)\n",
+    "print(\"a_next[4] = \", a_next[4])\n",
+    "print(\"a_next.shape = \", c_next.shape)\n",
+    "print(\"c_next[2] = \", c_next[2])\n",
+    "print(\"c_next.shape = \", c_next.shape)\n",
+    "print(\"yt[1] =\", yt[1])\n",
+    "print(\"yt.shape = \", yt.shape)\n",
+    "print(\"cache[1][3] =\", cache[1][3])\n",
+    "print(\"len(cache) = \", len(cache))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**预期输出**:\n",
+    "\n",
+    "<table>\n",
+    "    <tr>\n",
+    "        <td>\n",
+    "            **a_next[4]**:\n",
+    "        </td>\n",
+    "        <td>\n",
+    "           [-0.66408471  0.0036921   0.02088357  0.22834167 -0.85575339  0.00138482\n",
+    "  0.76566531  0.34631421 -0.00215674  0.43827275]\n",
+    "        </td>\n",
+    "    </tr>\n",
+    "        <tr>\n",
+    "        <td>\n",
+    "            **a_next.shape**:\n",
+    "        </td>\n",
+    "        <td>\n",
+    "           (5, 10)\n",
+    "        </td>\n",
+    "    </tr>\n",
+    "        <tr>\n",
+    "        <td>\n",
+    "            **c_next[2]**:\n",
+    "        </td>\n",
+    "        <td>\n",
+    "           [ 0.63267805  1.00570849  0.35504474  0.20690913 -1.64566718  0.11832942\n",
+    "  0.76449811 -0.0981561  -0.74348425 -0.26810932]\n",
+    "        </td>\n",
+    "    </tr>\n",
+    "        <tr>\n",
+    "        <td>\n",
+    "            **c_next.shape**:\n",
+    "        </td>\n",
+    "        <td>\n",
+    "           (5, 10)\n",
+    "        </td>\n",
+    "    </tr>\n",
+    "        <tr>\n",
+    "        <td>\n",
+    "            **yt[1]**:\n",
+    "        </td>\n",
+    "        <td>\n",
+    "           [ 0.79913913  0.15986619  0.22412122  0.15606108  0.97057211  0.31146381\n",
+    "  0.00943007  0.12666353  0.39380172  0.07828381]\n",
+    "        </td>\n",
+    "    </tr>\n",
+    "        <tr>\n",
+    "        <td>\n",
+    "            **yt.shape**:\n",
+    "        </td>\n",
+    "        <td>\n",
+    "           (2, 10)\n",
+    "        </td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <td>\n",
+    "            **cache[1][3]**:\n",
+    "        </td>\n",
+    "        <td>\n",
+    "           [-0.16263996  1.03729328  0.72938082 -0.54101719  0.02752074 -0.30821874\n",
+    "  0.07651101 -1.03752894  1.41219977 -0.37647422]\n",
+    "        </td>\n",
+    "    </tr>\n",
+    "        <tr>\n",
+    "        <td>\n",
+    "            **len(cache)**:\n",
+    "        </td>\n",
+    "        <td>\n",
+    "           10\n",
+    "        </td>\n",
+    "    </tr>\n",
+    "\n",
+    "</table>"
    ]
   },
   {
