--- a/Recurrent Neural Networks.ipynb
+++ b/Recurrent Neural Networks.ipynb
@@ -747,6 +747,209 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "同样地，LSTM架构的RNN，就是不断重复LSTM单元。\n",
+    "\n",
+    "<img src=\"img/LSTM_rnn.png\" style=\"width:500;height:300px;\">\n",
+    "<caption><center> **Figure 4**: LSTM over multiple time-steps. </center></caption>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# GRADED FUNCTION: lstm_forward\n",
+    "\n",
+    "def lstm_forward(x, a0, parameters):\n",
+    "    \"\"\"\n",
+    "    Implement the forward propagation of the recurrent neural network using an LSTM-cell described in Figure (3).\n",
+    "\n",
+    "    Arguments:\n",
+    "    x -- Input data for every time-step, of shape (n_x, m, T_x).\n",
+    "    a0 -- Initial hidden state, of shape (n_a, m)\n",
+    "    parameters -- python dictionary containing:\n",
+    "                        Wf -- Weight matrix of the forget gate, numpy array of shape (n_a, n_a + n_x)\n",
+    "                        bf -- Bias of the forget gate, numpy array of shape (n_a, 1)\n",
+    "                        Wi -- Weight matrix of the update gate, numpy array of shape (n_a, n_a + n_x)\n",
+    "                        bi -- Bias of the update gate, numpy array of shape (n_a, 1)\n",
+    "                        Wc -- Weight matrix of the first \"tanh\", numpy array of shape (n_a, n_a + n_x)\n",
+    "                        bc -- Bias of the first \"tanh\", numpy array of shape (n_a, 1)\n",
+    "                        Wo -- Weight matrix of the output gate, numpy array of shape (n_a, n_a + n_x)\n",
+    "                        bo -- Bias of the output gate, numpy array of shape (n_a, 1)\n",
+    "                        Wy -- Weight matrix relating the hidden-state to the output, numpy array of shape (n_y, n_a)\n",
+    "                        by -- Bias relating the hidden-state to the output, numpy array of shape (n_y, 1)\n",
+    "                        \n",
+    "    Returns:\n",
+    "    a -- Hidden states for every time-step, numpy array of shape (n_a, m, T_x)\n",
+    "    y -- Predictions for every time-step, numpy array of shape (n_y, m, T_x)\n",
+    "    caches -- tuple of values needed for the backward pass, contains (list of all the caches, x)\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # Initialize \"caches\", which will track the list of all the caches\n",
+    "    caches = []\n",
+    "    \n",
+    "    ### START CODE HERE ###\n",
+    "    # Retrieve dimensions from shapes of x and parameters['Wy'] (≈2 lines)\n",
+    "    n_x, m, T_x = x.shape\n",
+    "    n_y, n_a = parameters[\"Wy\"].shape\n",
+    "    \n",
+    "    # initialize \"a\", \"c\" and \"y\" with zeros (≈3 lines)\n",
+    "    a = np.zeros((n_a, m, T_x))\n",
+    "    c = np.zeros((n_a, m, T_x))\n",
+    "    y = np.zeros((n_y, m, T_x))\n",
+    "    \n",
+    "    # Initialize a_next and c_next (≈2 lines)\n",
+    "    a_next = a0\n",
+    "    c_next = np.zeros((n_a, m))\n",
+    "    \n",
+    "    # loop over all time-steps\n",
+    "    for t in range(T_x):\n",
+    "        # Update next hidden state, next memory state, compute the prediction, get the cache (≈1 line)\n",
+    "        a_next, c_next, yt, cache = lstm_cell_forward(x[:,:,t], a_next, c_next, parameters)\n",
+    "        # Save the value of the new \"next\" hidden state in a (≈1 line)\n",
+    "        a[:,:,t] = a_next\n",
+    "        # Save the value of the prediction in y (≈1 line)\n",
+    "        y[:,:,t] = yt\n",
+    "        # Save the value of the next cell state (≈1 line)\n",
+    "        c[:,:,t]  = c_next\n",
+    "        # Append the cache into caches (≈1 line)\n",
+    "        caches.append(cache)\n",
+    "        \n",
+    "    ### END CODE HERE ###\n",
+    "    \n",
+    "    # store values needed for backward propagation in cache\n",
+    "    caches = (caches, x)\n",
+    "\n",
+    "    return a, y, c, caches"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a[4][3][6] =  0.172117767533\n",
+      "a.shape =  (5, 10, 7)\n",
+      "y[1][4][3] = 0.95087346185\n",
+      "y.shape =  (2, 10, 7)\n",
+      "caches[1][1[1]] = [ 0.82797464  0.23009474  0.76201118 -0.22232814 -0.20075807  0.18656139\n",
+      "  0.41005165]\n",
+      "c[1][2][1] -0.855544916718\n",
+      "len(caches) =  2\n"
+     ]
+    }
+   ],
+   "source": [
+    "np.random.seed(1)\n",
+    "x = np.random.randn(3,10,7)\n",
+    "a0 = np.random.randn(5,10)\n",
+    "Wf = np.random.randn(5, 5+3)\n",
+    "bf = np.random.randn(5,1)\n",
+    "Wi = np.random.randn(5, 5+3)\n",
+    "bi = np.random.randn(5,1)\n",
+    "Wo = np.random.randn(5, 5+3)\n",
+    "bo = np.random.randn(5,1)\n",
+    "Wc = np.random.randn(5, 5+3)\n",
+    "bc = np.random.randn(5,1)\n",
+    "Wy = np.random.randn(2,5)\n",
+    "by = np.random.randn(2,1)\n",
+    "\n",
+    "parameters = {\"Wf\": Wf, \"Wi\": Wi, \"Wo\": Wo, \"Wc\": Wc, \"Wy\": Wy, \"bf\": bf, \"bi\": bi, \"bo\": bo, \"bc\": bc, \"by\": by}\n",
+    "\n",
+    "a, y, c, caches = lstm_forward(x, a0, parameters)\n",
+    "print(\"a[4][3][6] = \", a[4][3][6])\n",
+    "print(\"a.shape = \", a.shape)\n",
+    "print(\"y[1][4][3] =\", y[1][4][3])\n",
+    "print(\"y.shape = \", y.shape)\n",
+    "print(\"caches[1][1[1]] =\", caches[1][1][1])\n",
+    "print(\"c[1][2][1]\", c[1][2][1])\n",
+    "print(\"len(caches) = \", len(caches))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**预期输出**:\n",
+    "\n",
+    "<table>\n",
+    "    <tr>\n",
+    "        <td>\n",
+    "            **a[4][3][6]** =\n",
+    "        </td>\n",
+    "        <td>\n",
+    "           0.172117767533\n",
+    "        </td>\n",
+    "    </tr>\n",
+    "        <tr>\n",
+    "        <td>\n",
+    "            **a.shape** =\n",
+    "        </td>\n",
+    "        <td>\n",
+    "           (5, 10, 7)\n",
+    "        </td>\n",
+    "    </tr>\n",
+    "        <tr>\n",
+    "        <td>\n",
+    "            **y[1][4][3]** =\n",
+    "        </td>\n",
+    "        <td>\n",
+    "           0.95087346185\n",
+    "        </td>\n",
+    "    </tr>\n",
+    "        <tr>\n",
+    "        <td>\n",
+    "            **y.shape** =\n",
+    "        </td>\n",
+    "        <td>\n",
+    "           (2, 10, 7)\n",
+    "        </td>\n",
+    "    </tr>\n",
+    "        <tr>\n",
+    "        <td>\n",
+    "            **caches[1][1][1]** =\n",
+    "        </td>\n",
+    "        <td>\n",
+    "           [ 0.82797464  0.23009474  0.76201118 -0.22232814 -0.20075807  0.18656139\n",
+    "  0.41005165]\n",
+    "        </td>\n",
+    "        \n",
+    "     </tr>\n",
+    "        <tr>\n",
+    "        <td>\n",
+    "            **c[1][2][1]** =\n",
+    "        </td>\n",
+    "        <td>\n",
+    "           -0.855544916718\n",
+    "        </td>\n",
+    "    </tr>       \n",
+    "        \n",
+    "    </tr>\n",
+    "        <tr>\n",
+    "        <td>\n",
+    "            **len(caches)** =\n",
+    "        </td>\n",
+    "        <td>\n",
+    "           2\n",
+    "        </td>\n",
+    "    </tr>\n",
+    "\n",
+    "</table>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 11. 双向循环神经网络 Bidirectional RNN\n",
     "\n",
     "BRNN和LSTM几乎是NLP问题中的标配。\n",
